--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -49,9 +49,9 @@ measurements, and 13454 measurements.
 In the first test, we evaluate the performance of the state-of-the-art robust
 SLAM method, a implementation of Max-Mixture~\cite{mm}, given dynamic landmark measurements.
 Max-Mixture is a robust extension to classical graph SLAM using Gaussian
-mixture in factor representation, that is, $ x_i = \sum_c \phi_c
-\mathcal{N}(\mu_c, \Sigma_c)$ for component $c$ and weight $\phi_c$, with
-observations being components, also similarly for $z_i$. Max-Mixture uses a max
+mixture in factor representation, that is, $ \boldsymbol{x}_i = \sum_c \phi_c
+\mathcal{N}(\boldsymbol{\mu}_c, \boldsymbol{\Sigma}_c)$ for component $c$ and weight $\phi_c$, with
+observations being components, also similarly for $\boldsymbol{z}_i$. Max-Mixture uses a max
 function to approximate and efficiently evaluate the sum of Gaussians. It is
 well-known for its capability of handling a large amount of incorrect loop
 closures, but it is untested against moving landmarks, and this experiment can
